<resources>
    <string name="app_name">智付客</string>
    <string name="merchant_code">商户代码</string>
    <string name="user_name">操作员号</string>
    <string name="user_password">登录密码</string>
    <string name="merchant_code_not_null">商户代码不能为空</string>
    <string name="user_name_not_null">操作员号不能为空</string>
    <string name="user_password_not_null">登录密码不能为空</string>
    <string name="login">登录</string>
    <string name="index_pay">收     款</string>

    <string name="today_earn">今日收益</string>
    <string name="today_statistics">今日共计</string>
    <string name="member_pay">会员充值</string>
    <string name="member_pay_confirm">确认充值</string>

    <string name="recharge_number_sample">""</string>
    <string name="number_sample_1">6785.62</string>
    <string name="number_sample_2">20万</string>


    <string name="qrcode_focus_on">请将二维码对准摄像头</string>

    <string name="payselect_scan">扫一扫</string>
    <string name="payselect_qrcode">收款码</string>

    <string name="unit_one">单</string>
    <string name="unit_two">元</string>
    <string name="unit_three">￥</string>

    <string name="index">首页</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>


    <string name="index_item_0">会员</string>
    <string name="index_item_1">核销</string>
    <string name="index_item_2">发券</string>
    <string name="index_item_3">卡券互投</string>
    <string name="index_item_4">交班</string>
    <string name="index_item_5">退款</string>
    <string name="index_item_7">我的订单</string>
    <string name="index_item_6">有卡有贷</string>


    <!--退款界面-->
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="cash">现金</string>
    <string name="refund_tip">退款金额（元）</string>
    <string name="refund_unit">￥</string>
    <string name="input_refund_sum">请输入退款金额</string>

    <string name="odd_numbers">商户单号：</string>
    <string name="input_odd_numbers">请输入单号</string>
    <string name="query">查询</string>
    <string name="refund">退款</string>
    <string name="focus_qrcode">请将二维码对准摄像头</string>

    <!--个人中心-->
    <string name="logout">退出登录</string>
    <string name="personal_center">个人中心</string>
    <string name="personal_center_deviceinfo">设备信息</string>
    <string name="personal_center_update">系统更新</string>
    <string name="update_tip">更新提示</string>
    <string name="tip">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--核销-->
    <string name="verify">核销</string>
    <string name="verify_change">切换键盘或扫一扫</string>
    <string name="verify_input">请输入兑换码</string>
    <string name="verify_clear">清空</string>
    <string name="verify_delete">删除</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_00">00</string>
    <string name="number_dot">.</string>
    <!--交班-->
    <string name="exchange">交班</string>
    <string name="exchange_sum">合计</string>
    <string name="exchange_now">现在交班</string>
    <string name="exchange_later">稍后交班</string>
    <string name="exchange_success">交班成功</string>
    <string name="exchange_fail">交班失败</string>
    <string name="exchange_confirm">是否现在交班？</string>
    <string name="exchange_1">微信收款</string>
    <string name="exchange_2">支付宝收款</string>
    <string name="exchange_3">现金收款</string>
    <string name="exchange_4">会员充值</string>
    <string name="exchange_5">退款</string>
    <string name="exchange_6">会员卡收款</string>

    <!--充值-->
    <string name="recharge">会员充值</string>
    <string name="recharge_search">搜索</string>
    <string name="recharge_name">会员姓名</string>
    <string name="recharge_number">会员卡号</string>
    <string name="recharge_mem_balance">会员余额</string>
    <string name="recharge_donor_balance">赠送余额</string>
    <string name="recharge_vip_level">会员等级</string>
    <string name="recharge_sum">充值金额（元）</string>
    <string name="recharge_sum_tip">请输入充值金额</string>
    <string name="recharge_donor_sum">赠送金额</string>
    <string name="recharge_discounts">充值优惠</string>
    <string name="recharge_discount_example">充100送20</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--设备信息-->
    <string name="device_info">设备信息</string>
    <string name="device_info_code">设备编码</string>
    <string name="device_info_type">设备型号</string>
    <string name="device_info_version">客户端版本</string>

    <!--消息内容-->
    <string name="mc">消息内容</string>
    <string name="mc_title">这里是消息的标题</string>
    <string name="mc_author">作者：李三字经尔热卖</string>
    <string name="mc_date">2018-1-23</string>
    <string name="mc_content">乐趣不一定源自于抽烟喝酒啊，只是有一部分人认为这是乐趣答主我认识一个自家亲戚，男已婚有一个12岁的儿子，不抽烟不喝酒不蹦迪每天下班回家研究做饭，做好了一份也就小小的，老婆孩子都会很正式了漱口品尝给意见一家人乐在其中偶尔夫妻二人童心大发就拿着儿子的玩具像小孩似得对打，儿子还在一边认认真真的告诉他们玩具都是谁唱歌也从不去KTV，老婆给弄了一套还算可以的常规设备，在家里用手机录歌，还被老婆拿来当手机铃声，心情好了就夫妻二人对唱一曲周末带孩子跑步钓鱼去乡下奶奶家看望奶奶跟当初儿子执意要养在奶奶家的小萨摩耶，虽然奶奶给养的超级肥硕见面一大一小两个男人都会抱着狗在地下滚作一团，他媳妇每次都说衣服会脏但是每次都笑盈盈的看着真的在没见过如此可爱的家庭了，相处起来如沐春风，那种骨子里的幸福感让你接触的时候无时无刻不觉得开心自在你说这么丰富的生活，要烟酒干嘛呢？烟酒还是留给孤独的人吧
    </string>
    <string name="sample_date">2018-07-25</string>
    <string name="order_list">我的订单</string>
    <!--支付成功-->
    <string name="pay_success">支付成功</string>
    <string name="pay_amount">付款金额</string>
    <string name="pay_done">完成</string>
    <string name="pay">支付</string>
    <string name="brew_detail">查看详情</string>

    <!--会员充值-->
    <string name="mrs_content_good">商品</string>
    <string name="mrs_content_merchant">商家</string>
    <string name="mrs_content_state">当前状态</string>
    <string name="mrs_content_deal_time">交易时间</string>
    <string name="mrs_content_way_of_pay">支付方式</string>
    <string name="mrs_content_number_of_deal">交易单号</string>
    <string name="mrs_content_number_of_merchant">商户单号</string>


    <!--订单信息-->
    <string name="order_info">订单信息</string>
    <string name="logining">正在登录</string>
    <string name="login_fail">登录失败</string>


    <string name="check_network_connection">请检查网络连接</string>


</resources>
