<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--今日收益-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/today_earn"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/today_earn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_sample_1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_37" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_16"
            android:gravity="bottom"
            android:paddingBottom="@dimen/dimen_5"
            android:text="@string/unit_two"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--今日共计-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_statistics"
                android:textColor="@color/white" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_sample_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_37" />

                <TextView
                    android:id="@+id/today_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_one"
                    android:textColor="@color/white" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>

        <!--会员充值-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_pay"
                android:textColor="@color/white" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_sample_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_37" />

                <TextView
                    android:id="@+id/member_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_two"
                    android:textColor="@color/white" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>