<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".activity.MessageContentActivity">

    <include
        android:id="@+id/mc_titlecontainer"
        layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mc_titlecontainer"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dimen_15"
        android:paddingStart="@dimen/dimen_15"
        >

        <TextView
            android:id="@+id/mc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mc_title"
            android:textColor="#333333"
            android:textSize="@dimen/font_16"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:id="@+id/mc_autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mc_author"
                android:textSize="@dimen/font_13"/>

            <TextView
                android:id="@+id/mc_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/mc_date"
                android:textSize="@dimen/font_12"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginTop="@dimen/dimen_9"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/mc_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:text="@string/mc_content"
            android:textColor="#333333"
            android:textSize="@dimen/font_13"/>
    </LinearLayout>
</RelativeLayout>