<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".activity.OrderInfoActivity">

    <include
        android:id="@+id/oi_titlecontainer"
        layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oi_titlecontainer"
        android:layout_marginEnd="@dimen/dimen_15"
        android:layout_marginStart="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/oi_pay_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_12"
            android:text="@string/pay_amount"
            android:textColor="#999999"
            android:textSize="@dimen/font_13"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/oi_pay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/number_sample_1"
                android:textColor="#333333"
                android:textSize="@dimen/font_26"/>

            <TextView
                android:id="@+id/oi_unit_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:text="@string/unit_two"
                android:textSize="@dimen/font_15"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginTop="@dimen/dimen_25"
            android:background="@color/divider"/>

        <include
            android:id="@+id/oi_content"
            layout="@layout/mrs_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_11"/>


        <TextView
            android:id="@+id/oi_refund"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_65"
            android:layout_marginStart="@dimen/dimen_65"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/success_backgroud"
            android:gravity="center"
            android:text="@string/refund"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>

</RelativeLayout>